--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "prettier": "3.6.2",
     "tw-animate-css": "^1.3.8",
